# PedestrianSlayer2

./: .gitignore  CMakeLists.txt  LICENSE  README.md  app.py  boards.h  configuration.h  main.cpp
BoardFirmware/: configuration.h  main.cpp
BoardFirmware/include/: Message.h  PID.h  SerialComm.h  UARTDriver.h  container.h
BoardFirmware/src/: Message.cpp
debug/: CMakeLists.txt  PedestrianSlayer2_board
doc/: InterfaceControlDocument.ods
include/: SPIDriver.h  SerialComm.h  UARTDriver.h  baudrate.h  container.h
libs/: CMakeLists.txt
libs/nlohmann/: CMakeLists.txt
libs/simdjson/: CMakeLists.txt
rover/: CMakeLists.txt  config.hpp  main.cpp
rover/include/modules/communication/: IPCMessage.hpp  Message.hpp
rover/include/modules/modes/: Modes.hpp
rover/include/modules/navigation/: LaneDetector.hpp  UBXDriver.hpp
rover/include/tasks/: ControllerTask.hpp  LatencyTracker.hpp  NavigationTask.hpp  PosixMutex.hpp  Schedulers.hpp  SlaveCommunicationTask.hpp  Task-org.hpp  Task.hpp  TaskScheduler-org.hpp  TaskScheduler.hpp  UserControlTask.hpp  schedulers.hpp
rover/include/utils/: Container.hpp  Miscs.hpp  Signal.hpp  Timing.hpp  Types.hpp
rover/include/utils/threading/: mutex.h  sched_ext.h
rover/src/modules/communication/: Message.cpp
rover/src/modules/modes/: Modes.cpp
rover/src/modules/navigation/: LaneDetector.cpp  UBXDriver.cpp
rover/src/tasks/: ControllerTask.cpp  LatencyTracker.cpp  NavigationTask.cpp  PosixMutex.cpp  Schedulers.cpp  SlaveCommunicationTask.cpp  Task.cpp  TaskScheduler.cpp  UserControlTask.cpp
rover/src/utils/: MathFun.cpp  math_fun.cpp
rover/src/utils/threading/: latency_tracker.cpp
src/: config.hpp  main.cpp
src/modules/communication/: IPC.hpp  IPCMessage.hpp  Message.cpp  Message.hpp
src/modules/communication/messages/: Message.hpp
src/modules/modes/: AutoMode.hpp  IdleMode.hpp  LaneDetectionMode.hpp  Mode.hpp  Modes.cpp  Modes.hpp  StartupMode.hpp  TerminationMode.hpp  TestMode.hpp  UserMode.hpp
src/modules/navigation/: EKF.hpp  LaneDetector.cpp  LaneDetector.hpp  UBXDriver.cpp  UBXDriver.hpp
src/nodes/navigation/: LaneDetector copy.cpp  LaneDetector.cpp  LaneDetector.hpp
src/tasks/: ControllerTask.cpp  ControllerTask.hpp  NavigationTask.cpp  NavigationTask.hpd  NavigationTask.hpp  RTScheduler.cpp  RTScheduler.hpp  RoverDriveTask.hpd  RoverDriveTask.hpp  SlaveCommunicationTask.cpp  SlaveCommunicationTask.hpp  Task.cpp  Task.hpp  TaskScheduler.cpp  TaskScheduler.hpp  UserControlTask.cpp  UserControlTask.hpd  UserControlTask.hpp  schedulers.hpp
src/utils/: app_exception.hpp  container.h  math_fun.cpp  math_fun.h  miscs.h  timing.h
src/utils/cactus_rt/: thread.h
src/utils/threading/: latency_tracker.cpp  latency_tracker.h  signal_handler.cpp  signal_handler.h
static/css/: keyboard-org.css  keyboard.css  slideshow.css  sortable-table.css
templates/: about.html  base.html  index.html  settings.html
